assets/scss/common/_form.scss
.btl-form-group {
	display: flex;
	align-items: center;
	&--top {
		align-items: flex-start;
	}
	@media screen and (max-width: 650px) {
		flex-direction: column;
	}
	.btl-form-label {
		font-size: 16px;
		line-height: 1.6;
		font-weight: 500;
		text-align: left;
		padding-right: 20px;
		padding-top: 8px;
		padding-bottom: 8px;
		min-width: 210px;
		@media screen and (max-width: 650px) {
			margin-bottom: 5px;
			text-align: center;
			padding-right: 0;
		}
		&.btl-required {
			&:after {
				content: '*';
				margin-left: 2px;
				color: $danger;
			}
		}
	}

	textarea.btl-form-control,
	input.btl-form-control {
		height: 44px;
		border-radius: 5px;
		background: $light;
		padding: 0 10px;
		width: 100%;
		max-width: 400px;
		border: 1px solid $light;
		&:focus {
			border: 1px solid $light-darken;
			outline: none;
			box-shadow: none;
		}
	}
	textarea.btl-form-control {
		padding-top: 15px;
		height: 80px;
	}
	.btl-select {
		width: 300px;
		.btl-react-select__control {
			background-color: $light;
			min-height: 50px;
			border: 1px solid $light;
			border-radius: 5px;
			.btl-react-select__value-container {
				padding-left: 15px;
				.btl-react-select__single-value {
					font-size: 16px;
					font-weight: 500;
					margin-left: 0;
				}
				.btl-react-select__input {
					input {
						box-shadow: none;
						min-height: 20px;
						height: 20px;
					}
				}
			}
			&.btl-react-select__control--is-focused {
				box-shadow: none;
				background-color: #fff;
			}
		}
	}
	&:not(:last-child) {
		margin-bottom: 20px;
	}
	.active-status {
		margin: 0 10px;
		&:before {
			content: '';
			display: inline-block;
			height: 10px;
			width: 10px;
			border-radius: 10px;
			margin-right: 5px;
		}
		&.Active {
			&:before {
				background: #26c17c;
			}
		}
		&.Disable {
			&:before {
				background: #ff4343;
			}
		}
	}
	.btl-modal-select {
		width: 300px;
		.btl-react-select__control {
			background-color: #fafafa;
			height: 50px;
			border: 1px solid #ebebeb;
			border-radius: 5px;
			.btl-react-select__value-container {
				padding-left: 15px;
				.btl-react-select__single-value {
					font-size: 16px;
					font-weight: 500;
					margin-left: 0;
				}
				.btl-react-select__input {
					input {
						box-shadow: none;
					}
				}
			}
			&.btl-react-select__control--is-focused {
				box-shadow: none;
				background-color: #fff;
			}
		}
	}
	.btl-modal-select--full {
		@extend .btl-modal-select;
		width: 200px;
	}
}
.btl-cle {
	.btl-form-group {
		.btl-form-label {
			min-width: 120px;
			width: 200px;
		}
	}

	.btl-cle-select-teaser {
		margin-bottom: 20px;
		.btl-form-group .btl-form-label {
			min-width: 148px;
		}
	}

	.btl-cle-select {
		margin-bottom: 20px;
		.btl-form-group .btl-form-label {
			min-width: 185px;
		}
	}
	.btl-cle-dragable-section {
		display: flex;
		column-gap: 5px;
		align-items: center;
		background-color: rgb(227, 244, 255);
		position: sticky;
		top: 35px;
		z-index: 1;
		padding: 12px;
		margin-bottom: 20px;
	}
}
.btl-checkbox-field {
	display: flex;
	cursor: pointer;
	min-height: 24px;
	align-items: center;
	input[type='checkbox'] {
		min-height: 15px;
		min-width: 15px;
		margin-top: 0;
	}
	&.block {
		display: inline-block;
		margin-right: 20px;
		.btl-tooltip {
			margin-left: 5px;
		}
	}
	.btl-check {
		display: none;
	}
	.text {
		padding-left: 40px;
		position: relative;
		color: $dark;
		font-weight: 500;
		font-size: 16px;
		min-height: 24px;
		&:before {
			position: absolute;
			font-family: 'better-links';
			content: '\e90c';
			left: 0;
			font-size: 24px;
			color: $secondary-lighten;
			height: 20px;
			border-radius: 2.5px;
			padding-top: 3px;
		}
	}
	.btl-check:checked + .text:before {
		content: '\e90e';
		color: $success;
	}
	.btl-check:disabled + .text:before {
		background: #e4e4e4;
		color: #e4e4e4;
		box-shadow: inset 0 2px 4px rgb(0 0 0 / 4%);
		cursor: initial;
	}
}
.btl-create-category-submit {
	height: 44px;
	display: flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	border: none;
	outline: none;
	box-shadow: none;
	background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
	color: $white;
	width: 100%;
	font-size: 16px;
	border-radius: 5px;
	margin-bottom: 5px;
	transition: box-shadow 0.2s ease;
	&:focus {
		border: none;
		outline: none;
		box-shadow: none;
	}
	&:hover {
		box-shadow: 0 5px 10px rgba(#003be2, 0.15);
	}
}

.dropdown {
	position: relative;
	.dropdown-menu {
		position: absolute;
		top: calc(100% + 10px);
		right: -5px;
		background: $white;
		border-radius: 5px;
		box-shadow: 0 10px 22px rgba($dark, 0.18);
		width: 110px;
		z-index: 999;
		ul {
			margin: 0;
			list-style: none;
			li {
				margin: 0;
				&:not(:last-child) {
					border-bottom: 1px solid $light-darken;
				}
			}
		}
		.link {
			border: none;
			outline: none;
			box-shadow: none;
			padding: 9px 20px;
			width: 100%;
			text-align: left;
			background: $white;
			font-size: 15px;
			color: $secondary;
			cursor: pointer;
			font-weight: 500;
			&:hover {
				color: $dark;
			}
			&.delete {
				&:hover {
					color: $danger;
				}
			}
		}
		.btl-confirm-message {
			display: flex;
			flex-direction: column;
			align-items: center;
			padding: 10px;
			.action-text {
				margin-top: 0;
				margin-bottom: 10px;
				color: $secondary;
				font-weight: 500;
			}
			.action-set {
				display: flex;
				width: 100%;
				justify-content: space-between;
				.action {
					padding: 3px 5px;
					border: 0;
					outline: 0;
					box-shadow: 0;
					color: $white;
					width: 45%;
					border-radius: 2px;
					cursor: pointer;
					text-transform: uppercase;
					font-size: 13px;
					font-weight: 500;
					display: flex;
					justify-content: center;
					align-items: center;
					&.yes {
						background: $success-lighten;
					}
					&.no {
						background: $danger;
					}
				}
			}
		}
	}
}

.btl-tooltip {
	span.dashicons.dashicons-info-outline {
		color: #a6a8ad;
	}
}

.btl-external-analytics-container {
	margin-bottom: 20px;
	.btl-form-control {
		background: #fafafa;
		border: 1px solid #ebebeb;
		&:disabled {
			background: #e4e4e4;
			cursor: initial;
		}
	}
}

.btl-external-analytics-container .btl-role-item.btl-form-group:last-child {
	margin-bottom: 40px;
}

.btl-external-analytics-container .btl-role-item.btl-form-group:first-child {
	margin-bottom: 0px;
}

.externalAnalyticsForm .btn-save-settings {
	margin-top: 40px;
}

span.pro-badge {
	background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
	color: #fff;
	border-radius: 2px;
	padding: 3px 6px;
	font-size: 10px;
	margin-left: 3px;
	line-height: 1;
	text-transform: uppercase;
	display: inline-flex;
	align-items: center;
	border-radius: 2px;
	transform: translateY(-10px);
	cursor: pointer;
}

//  fix: 'Auto-Linked Keywords Icon' option checkbox is not aligned start
.btl-form-group.btl-form-group-autolink-keyword-icon {
	.btl-form-label {
		padding-right: 16px;
	}
	& > div.btl-form-field {
		margin-top: 5px;
	}
}

//  fix: 'Auto-Linked Keywords Icon' option checkbox is not aligned end

//  fix: 'Random URL Slug' & 'Case Sensitivity' option not aligned - start
.btl-form-group.btl-form-group--make-center .link-options__body {
	margin-top: -5px;
}
//  fix: 'Random URL Slug' & 'Case Sensitivity' option not aligned - end

